k8s/chaos_istio_fault_injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-chaos-fault-injection
  namespace: default
spec:
  hosts:
  - frontend-svc
  http:
  - route:
    - destination:
        host: frontend-svc
        subset: v1
    # Inject HTTP 503 errors to 15% of all requests to test frontend resilience
    fault:
      abort:
        httpStatus: 503
        percentage:
          value: 15.0
      # Additionally add 5 seconds of latency to 10% of requests
      delay:
        fixedDelay: 5s
        percentage:
          value: 10.0
